# fexplorer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rocklee/fexplorer/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/rocklee/fexplorer/: DecodeActivity.java  FExplorerActivity.java  GifView.java  MyAdapter.java  PhotoPlayerActivity.java  VideoPlayerActivity.java
app/src/main/java/com/rocklee/fexplorer/CustomView/: RangeSeekBar.java
app/src/main/java/com/rocklee/fexplorer/Decoder/: GifDecoder.java  VideoDecoder.java
app/src/main/java/com/rocklee/fexplorer/activities/: DecodeActivity.java  FExplorerActivity.java  PhotoPlayerActivity.java  RequestPermissionsActivity.java  VideoPlayerActivity.java
app/src/main/java/com/rocklee/fexplorer/test/: Counter.java  CounterService.java  ICounterCallback.java  ICounterService.java
app/src/main/java/com/rocklee/fexplorer/utils/: MyAdapter.java  QueryMedia.java  VideoContainer.java
app/src/main/res/layout/: activity_fexplorer.xml  activity_photo_player.xml  activity_video_player.xml  file.xml  gifview.xml  test.xml
app/src/main/res/layout-land-hdpi/: activity_video_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rocklee/fexplorer/: ExampleUnitTest.java
